# vacdm-plugin

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: UpdateSubmodules.cmake
src/core/: DataManager.cpp  Server.cpp
src/log/: Logger.cpp
src/tests/: CMakeLists.txt  test_test.cpp
